--- a/notebooks/basic_tutorial/02.sedona_read_various_data_format.ipynb
+++ b/notebooks/basic_tutorial/02.sedona_read_various_data_format.ipynb
@@ -49,8 +49,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-25T14:41:01.445022Z",
-     "start_time": "2024-11-25T14:40:59.811588Z"
+     "end_time": "2024-11-27T08:10:54.501495Z",
+     "start_time": "2024-11-27T08:10:50.838574Z"
     }
    },
    "id": "ce7c87816a39c1a6",
@@ -60,8 +60,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T14:52:02.921195Z",
-     "start_time": "2024-11-25T14:52:02.909796Z"
+     "end_time": "2024-11-27T08:10:56.411162Z",
+     "start_time": "2024-11-27T08:10:56.395522Z"
     }
    },
    "cell_type": "code",
@@ -72,7 +72,7 @@
    ],
    "id": "336ea98726722af5",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 2
   },
   {
    "cell_type": "code",
@@ -92,13 +92,13 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-25T14:41:55.973723Z",
-     "start_time": "2024-11-25T14:41:55.944971Z"
+     "end_time": "2024-11-27T08:11:27.292082Z",
+     "start_time": "2024-11-27T08:10:59.827479Z"
     }
    },
    "id": "7b1a2689b9abef60",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 3
   },
   {
    "cell_type": "code",
@@ -110,26 +110,26 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-25T14:42:10.587328Z",
-     "start_time": "2024-11-25T14:42:06.727991Z"
+     "end_time": "2024-11-27T08:16:49.280334Z",
+     "start_time": "2024-11-27T08:16:43.649617Z"
     }
    },
    "id": "ec2dc3be27ed3c86",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T16:09:39.390570Z",
-     "start_time": "2024-11-25T16:09:39.304938Z"
+     "end_time": "2024-11-27T08:16:50.940076Z",
+     "start_time": "2024-11-27T08:16:50.920995Z"
     }
    },
    "cell_type": "code",
    "source": "spark = sedona.getActiveSession()",
    "id": "ab5399a11fd94a6b",
    "outputs": [],
-   "execution_count": 42
+   "execution_count": 5
   },
   {
    "cell_type": "code",
@@ -140,13 +140,13 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-25T14:42:13.103962Z",
-     "start_time": "2024-11-25T14:42:13.089838Z"
+     "end_time": "2024-11-27T08:16:52.485218Z",
+     "start_time": "2024-11-27T08:16:52.473319Z"
     }
    },
    "id": "cb60751167bf9567",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -185,8 +185,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-25T14:52:05.568355Z",
-     "start_time": "2024-11-25T14:52:04.806988Z"
+     "end_time": "2024-11-27T08:16:55.814836Z",
+     "start_time": "2024-11-27T08:16:54.659530Z"
     }
    },
    "id": "e4172408db2d7a3b",
@@ -202,13 +202,13 @@
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T14:52:19.479070Z",
-     "start_time": "2024-11-25T14:52:19.334227Z"
+     "end_time": "2024-11-27T08:16:59.096780Z",
+     "start_time": "2024-11-27T08:16:58.880044Z"
     }
    },
    "cell_type": "code",
@@ -233,13 +233,13 @@
      ]
     }
    ],
-   "execution_count": 14
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T14:52:46.074312Z",
-     "start_time": "2024-11-25T14:52:46.014139Z"
+     "end_time": "2024-11-27T08:17:06.988147Z",
+     "start_time": "2024-11-27T08:17:06.936977Z"
     }
    },
    "cell_type": "code",
@@ -249,13 +249,13 @@
    ],
    "id": "f9a5233b8b8a2479",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T14:53:26.214170Z",
-     "start_time": "2024-11-25T14:53:26.056452Z"
+     "end_time": "2024-11-27T08:17:09.021767Z",
+     "start_time": "2024-11-27T08:17:08.825179Z"
     }
    },
    "cell_type": "code",
@@ -276,13 +276,13 @@
      ]
     }
    ],
-   "execution_count": 16
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T14:53:48.637255Z",
-     "start_time": "2024-11-25T14:53:48.428944Z"
+     "end_time": "2024-11-27T08:17:11.800050Z",
+     "start_time": "2024-11-27T08:17:11.537024Z"
     }
    },
    "cell_type": "code",
@@ -307,7 +307,7 @@
      ]
     }
    ],
-   "execution_count": 17
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -322,8 +322,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T15:00:44.994328Z",
-     "start_time": "2024-11-25T15:00:44.962696Z"
+     "end_time": "2024-11-27T08:17:15.275515Z",
+     "start_time": "2024-11-27T08:17:15.244272Z"
     }
    },
    "cell_type": "code",
@@ -338,18 +338,18 @@
      "output_type": "stream",
      "text": [
       "root\n",
-      " |-- line_col: geometry (nullable = true)\n",
+      " |-- line: geometry (nullable = true)\n",
       "\n"
      ]
     }
    ],
-   "execution_count": 18
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T15:02:04.379739Z",
-     "start_time": "2024-11-25T15:02:04.290365Z"
+     "end_time": "2024-11-27T08:17:20.831370Z",
+     "start_time": "2024-11-27T08:17:20.744924Z"
     }
    },
    "cell_type": "code",
@@ -361,7 +361,7 @@
      "output_type": "stream",
      "text": [
       "+----------------------------------------------------------------------------------+\n",
-      "|line_col                                                                          |\n",
+      "|line                                                                              |\n",
       "+----------------------------------------------------------------------------------+\n",
       "|LINESTRING (-74.0428197 40.6867969, -74.0421975 40.6921336, -74.050802 40.6912794)|\n",
       "+----------------------------------------------------------------------------------+\n",
@@ -369,7 +369,7 @@
      ]
     }
    ],
-   "execution_count": 19
+   "execution_count": 13
   },
   {
    "metadata": {},
@@ -698,28 +698,41 @@
     "https://sedona.apache.org/1.6.1/tutorial/sql\n",
     "Geojson has two different organization:\n",
     "- single-line GeoJSON\n",
-    "- multi-line "
+    "- multi-line \n",
+    "\n",
+    "#### 1.5.1 Read single-line GeoJSON\n",
+    "\n",
+    "In the single-line geoJSON organization, each line is a separate, self-contained GeoJSON object. Below is an example\n",
+    "\n",
+    "```json\n",
+    "{\"type\":\"Feature\",\"geometry\":{\"type\":\"Point\",\"coordinates\":[102.0,0.5]},\"properties\":{\"prop0\":\"value0\"}}\n",
+    "{\"type\":\"Feature\",\"geometry\":{\"type\":\"LineString\",\"coordinates\":[[102.0,0.0],[103.0,1.0],[104.0,0.0],[105.0,1.0]]},\"properties\":{\"prop0\":\"value1\"}}\n",
+    "{\"type\":\"Feature\",\"geometry\":{\"type\":\"Polygon\",\"coordinates\":[[[100.0,0.0],[101.0,0.0],[101.0,1.0],[100.0,1.0],[100.0,0.0]]]},\"properties\":{\"prop0\":\"value2\"}}\n",
+    "```\n",
+    "You can notice that each line starts with `{` ends with `}`, which means it's a self-contained json object.\n",
+    "\n",
+    "> This format is efficient for processing large datasets, because each line is an independent GeoJSON Feature which can be processed in parallel.  "
    ],
    "id": "a80ffc027087658"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T16:10:27.899654Z",
-     "start_time": "2024-11-25T16:10:27.892767Z"
+     "end_time": "2024-11-27T08:17:54.729850Z",
+     "start_time": "2024-11-27T08:17:54.719375Z"
     }
    },
    "cell_type": "code",
    "source": "us_county_json_file_path = f\"{data_dir}/geojson/us_county.json\"",
    "id": "382d006942380f41",
    "outputs": [],
-   "execution_count": 43
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T16:10:43.175125Z",
-     "start_time": "2024-11-25T16:10:42.604091Z"
+     "end_time": "2024-11-27T08:17:57.628008Z",
+     "start_time": "2024-11-27T08:17:56.838571Z"
     }
    },
    "cell_type": "code",
@@ -736,26 +749,300 @@
       "+--------------------+--------------------+-------+\n",
       "|            geometry|          properties|   type|\n",
       "+--------------------+--------------------+-------+\n",
-      "|{[[[-87.621765, 3...|{1500000US0107701...|Feature|\n",
-      "|{[[[-85.719017, 3...|{1500000US0104502...|Feature|\n",
-      "|{[[[-86.000685, 3...|{1500000US0105500...|Feature|\n",
-      "|{[[[-86.574172, 3...|{1500000US0108900...|Feature|\n",
-      "|{[[[-85.38287, 31...|{1500000US0106904...|Feature|\n",
+      "|POLYGON ((-87.621...|{1500000US0107701...|Feature|\n",
+      "|POLYGON ((-85.719...|{1500000US0104502...|Feature|\n",
+      "|POLYGON ((-86.000...|{1500000US0105500...|Feature|\n",
+      "|POLYGON ((-86.574...|{1500000US0108900...|Feature|\n",
+      "|POLYGON ((-85.382...|{1500000US0106904...|Feature|\n",
       "+--------------------+--------------------+-------+\n",
       "only showing top 5 rows\n",
       "\n"
      ]
     }
    ],
-   "execution_count": 45
+   "execution_count": 15
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-27T08:17:59.957974Z",
+     "start_time": "2024-11-27T08:17:59.943239Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "raw_json_df.printSchema()",
+   "id": "78bf74e51113c324",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- geometry: geometry (nullable = true)\n",
+      " |-- properties: struct (nullable = true)\n",
+      " |    |-- AFFGEOID: string (nullable = true)\n",
+      " |    |-- ALAND: long (nullable = true)\n",
+      " |    |-- AWATER: long (nullable = true)\n",
+      " |    |-- BLKGRPCE: string (nullable = true)\n",
+      " |    |-- COUNTYFP: string (nullable = true)\n",
+      " |    |-- GEOID: string (nullable = true)\n",
+      " |    |-- LSAD: string (nullable = true)\n",
+      " |    |-- NAME: string (nullable = true)\n",
+      " |    |-- STATEFP: string (nullable = true)\n",
+      " |    |-- TRACTCE: string (nullable = true)\n",
+      " |-- type: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 16
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### 1.5.2 Read multi-line GeoJSON\n",
+    "\n",
+    "The multi-line GeoJSON use a global `{ \"type\": \"FeatureCollection\", }` to encapsulate all geo features in one JSON object. Below is an example\n",
+    "\n",
+    "```json\n",
+    "{ \"type\": \"FeatureCollection\",\n",
+    "    \"features\": [\n",
+    "      { \"type\": \"Feature\",\n",
+    "        \"geometry\": {\"type\": \"Point\", \"coordinates\": [102.0, 0.5]},\n",
+    "        \"properties\": {\"prop0\": \"value0\"}\n",
+    "        },\n",
+    "      { \"type\": \"Feature\",\n",
+    "        \"geometry\": {\n",
+    "          \"type\": \"LineString\",\n",
+    "          \"coordinates\": [\n",
+    "            [102.0, 0.0], [103.0, 1.0], [104.0, 0.0], [105.0, 1.0]\n",
+    "            ]\n",
+    "          },\n",
+    "        \"properties\": {\n",
+    "          \"prop0\": \"value1\",\n",
+    "          \"prop1\": 0.0\n",
+    "          }\n",
+    "        },\n",
+    "      { \"type\": \"Feature\",\n",
+    "         \"geometry\": {\n",
+    "           \"type\": \"Polygon\",\n",
+    "           \"coordinates\": [\n",
+    "             [ [100.0, 0.0], [101.0, 0.0], [101.0, 1.0],\n",
+    "               [100.0, 1.0], [100.0, 0.0] ]\n",
+    "             ]\n",
+    "         },\n",
+    "         \"properties\": {\n",
+    "           \"prop0\": \"value2\",\n",
+    "           \"prop1\": {\"this\": \"that\"}\n",
+    "           }\n",
+    "         }\n",
+    "       ]\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "Multiline format is preferable for scenarios where files need to be human-readable or manually edited.\n",
+    "\n",
+    "As the entire file is considered as a single json object, it's hard to process in parallel"
+   ],
+   "id": "791d73200fd0eecc"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-27T08:42:34.806071Z",
+     "start_time": "2024-11-27T08:42:34.642251Z"
+    }
+   },
    "cell_type": "code",
+   "source": [
+    "from pyspark.sql.functions import expr\n",
+    "\n",
+    "multi_line_json_file_path = f\"{data_dir}/geojson/multi_lines.json\"\n",
+    "\n",
+    "df_raw = sedona.read.format(\"geojson\").option(\"multiLine\", \"true\").load(multi_line_json_file_path)\n",
+    "          \n",
+    "df_raw.show(5,truncate=False)\n",
+    "df_raw.printSchema()"
+   ],
+   "id": "883de592ef21f585",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------+\n",
+      "|features                                                                                                                                                                                            |type             |\n",
+      "+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------+\n",
+      "|[{POINT (102 0.5), {value0, NULL}, Feature}, {LINESTRING (102 0, 103 1, 104 0, 105 1), {value1, 0.0}, Feature}, {POLYGON ((100 0, 101 0, 101 1, 100 1, 100 0)), {value2, {\"this\":\"that\"}}, Feature}]|FeatureCollection|\n",
+      "+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------+\n",
+      "\n",
+      "root\n",
+      " |-- features: array (nullable = true)\n",
+      " |    |-- element: struct (containsNull = true)\n",
+      " |    |    |-- geometry: geometry (nullable = true)\n",
+      " |    |    |-- properties: struct (nullable = true)\n",
+      " |    |    |    |-- prop0: string (nullable = true)\n",
+      " |    |    |    |-- prop1: string (nullable = true)\n",
+      " |    |    |-- type: string (nullable = true)\n",
+      " |-- type: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 24
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "As the entire file is a single json object(FeatureCollection), all features are consider as items in one big array, To get one feature per row, we need to explode the array envelope.",
+   "id": "3d5499209a2899c3"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-27T08:38:33.052386Z",
+     "start_time": "2024-11-27T08:38:32.934913Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df = df_raw.selectExpr(\"explode(features) as features\").select(\"features.*\")\n",
+    " \n",
+    "\n",
+    "df.show()\n",
+    "df.printSchema()"
+   ],
+   "id": "9dbb04ab4d951435",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+--------------------+-------+\n",
+      "|            geometry|          properties|   type|\n",
+      "+--------------------+--------------------+-------+\n",
+      "|     POINT (102 0.5)|      {value0, NULL}|Feature|\n",
+      "|LINESTRING (102 0...|       {value1, 0.0}|Feature|\n",
+      "|POLYGON ((100 0, ...|{value2, {\"this\":...|Feature|\n",
+      "+--------------------+--------------------+-------+\n",
+      "\n",
+      "root\n",
+      " |-- geometry: geometry (nullable = true)\n",
+      " |-- properties: struct (nullable = true)\n",
+      " |    |-- prop0: string (nullable = true)\n",
+      " |    |-- prop1: string (nullable = true)\n",
+      " |-- type: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 23
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 1.6 Read GML\n",
+    "\n",
+    "**GML(Geography Markup Language)** is an `XML based encoding standard` for geographic information developed by the `OpenGIS Consortium (OGC)`. You can find the official doc [here](https://www.ogc.org/publications/standard/gml/)\n",
+    "It has three major version:\n",
+    "- GML 1\n",
+    "- GML 2\n",
+    "- GML 3\n",
+    "\n",
+    "Sedona(<v1.6.1) only supports `GML1 and GML2` for now.  "
+   ],
+   "id": "85b28992d1387238"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-27T09:37:19.269859Z",
+     "start_time": "2024-11-27T09:37:19.248576Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "gml_sample = \"\"\"\n",
+    "<gml:LineString srsName=\"EPSG:4269\">\n",
+    "        <gml:coordinates>\n",
+    "            -71.16028,42.258729\n",
+    "            -71.160837,42.259112\n",
+    "            -71.161143,42.25932\n",
+    "        </gml:coordinates>\n",
+    "</gml:LineString>\n",
+    "\"\"\"\n",
+    "\n",
+    "gml_df = sedona.sql(f\"SELECT ST_GeomFromGML('{gml_sample}') as line\")"
+   ],
+   "id": "2cfb962363025ccd",
    "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "78bf74e51113c324"
+   "execution_count": 33
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-27T09:37:32.841357Z",
+     "start_time": "2024-11-27T09:37:32.757931Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "gml_df.show(5, truncate=False)\n",
+    "gml_df.printSchema()"
+   ],
+   "id": "f288f5801e68ef26",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------------------------------------------------------------------+\n",
+      "|line                                                                       |\n",
+      "+---------------------------------------------------------------------------+\n",
+      "|LINESTRING (-71.16028 42.258729, -71.160837 42.259112, -71.161143 42.25932)|\n",
+      "+---------------------------------------------------------------------------+\n",
+      "\n",
+      "root\n",
+      " |-- line: geometry (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 35
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 1.7 Read KML\n",
+    "\n",
+    "**Keyhole Markup Language (KML)** is an `XML notation` for expressing geographic annotation and visualization within two-dimensional maps and three-dimensional Earth browsers. `KML was developed for use with Google Earth`, which was originally named `Keyhole Earth Viewer`.\n",
+    "\n",
+    "A complete kml file example.\n",
+    "\n",
+    "```xml\n",
+    "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
+    "<kml xmlns=\"http://www.opengis.net/kml/2.2\">\n",
+    "<Document>\n",
+    "<Placemark>\n",
+    "  <name>New York City</name>\n",
+    "  <description>New York City</description>\n",
+    "  <Point>\n",
+    "    <coordinates>-74.006393,40.714172,0</coordinates>\n",
+    "  </Point>\n",
+    "</Placemark>\n",
+    "</Document>\n",
+    "</kml>\n",
+    "``` \n",
+    "\n",
+    "You can notice the coordinates has three attributes (longitude,latitude,altitude)\n",
+    "\n",
+    "\n",
+    "\n"
+   ],
+   "id": "2aba54555eae2c36"
   },
   {
    "cell_type": "markdown",
