--- a/notebooks/basic_tutorial/02.sedona_read_various_data_format.ipynb
+++ b/notebooks/basic_tutorial/02.sedona_read_various_data_format.ipynb
@@ -1037,175 +1037,208 @@
     "</kml>\n",
     "``` \n",
     "\n",
-    "You can notice the coordinates has three attributes (longitude,latitude,altitude)\n",
-    "\n",
+    "You can notice the coordinates has three attributes (longitude,latitude,altitude), with the altitude coordinates, we can build a 3D map.\n",
     "\n",
     "\n"
    ],
    "id": "2aba54555eae2c36"
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "### Disk usage\n",
-    "\n",
-    "The shape file use 301 MB disk space"
-   ],
    "metadata": {
-    "collapsed": false
+    "ExecuteTime": {
+     "end_time": "2024-11-27T10:05:03.699961Z",
+     "start_time": "2024-11-27T10:05:03.671854Z"
+    }
    },
-   "id": "507549fa81351e8"
+   "cell_type": "code",
+   "source": [
+    "kml_sample = \"\"\"\n",
+    "<Point>\n",
+    "    <coordinates>-74.006393,40.714172,0</coordinates>\n",
+    "</Point>\n",
+    "\"\"\"\n",
+    "\n",
+    "kml_df = sedona.sql(f\"SELECT ST_GeomFromKML('{kml_sample}') as point\")"
+   ],
+   "id": "bc9ca2a51f3c2acf",
+   "outputs": [],
+   "execution_count": 40
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-27T10:05:05.554681Z",
+     "start_time": "2024-11-27T10:05:05.493668Z"
+    }
+   },
    "cell_type": "code",
-   "execution_count": 31,
+   "source": [
+    "kml_df.show(5, truncate=False)\n",
+    "kml_df.printSchema()"
+   ],
+   "id": "d030ee59c92b1928",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.9M\t/home/pengfei/data_set/kaggle/geospatial/communes_fr_shape/communes-20220101.dbf\r\n",
-      "4.0K\t/home/pengfei/data_set/kaggle/geospatial/communes_fr_shape/communes-20220101.prj\r\n",
-      "4.0K\t/home/pengfei/data_set/kaggle/geospatial/communes_fr_shape/communes-descriptif.txt\r\n",
-      "276K\t/home/pengfei/data_set/kaggle/geospatial/communes_fr_shape/communes-20220101.shx\r\n",
-      "4.0K\t/home/pengfei/data_set/kaggle/geospatial/communes_fr_shape/LICENCE.txt\r\n",
-      "4.0K\t/home/pengfei/data_set/kaggle/geospatial/communes_fr_shape/communes-20220101.cpg\r\n",
-      "292M\t/home/pengfei/data_set/kaggle/geospatial/communes_fr_shape/communes-20220101.shp\r\n",
-      "301M\t/home/pengfei/data_set/kaggle/geospatial/communes_fr_shape\r\n"
+      "+----------------------------+\n",
+      "|point                       |\n",
+      "+----------------------------+\n",
+      "|POINT (-74.006393 40.714172)|\n",
+      "+----------------------------+\n",
+      "\n",
+      "root\n",
+      " |-- point: geometry (nullable = true)\n",
+      "\n"
      ]
     }
    ],
+   "execution_count": 41
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    "! du -ah /home/pengfei/data_set/kaggle/geospatial/communes_fr_shape\n"
+    "## 1.8 Read Geohash\n",
+    "\n",
+    "A **Geohash is a unique identifier** of a specific region on the Earth. The basic idea is that the Earth is divided into regions of user-defined size and each region is assigned a unique id, which is called its Geohash. \n",
+    "\n",
+    "You can try to get the geohash of any region with this web site: https://www.movable-type.co.uk/scripts/geohash.html"
    ],
+   "id": "5f25f1a13b33f821"
+  },
+  {
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-15T14:27:35.598403879Z",
-     "start_time": "2024-04-15T14:27:34.466755621Z"
+     "end_time": "2024-11-27T10:09:19.900576Z",
+     "start_time": "2024-11-27T10:09:19.880378Z"
     }
    },
-   "id": "d90a99b5ae12e00e"
+   "cell_type": "code",
+   "source": [
+    "geohash_sample = \"s00twy01mt\"\n",
+    "\n",
+    "\n",
+    "geohash_df = sedona.sql(f\"SELECT ST_GeomFromGeoHash('{geohash_sample}') as polygon\")"
+   ],
+   "id": "54626162d60ec55",
+   "outputs": [],
+   "execution_count": 42
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-27T10:09:29.629647Z",
+     "start_time": "2024-11-27T10:09:29.571399Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "geohash_df.show(5, truncate=False)\n",
+    "geohash_df.printSchema()"
+   ],
+   "id": "28e824f160368b06",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "|polygon                                                                                                                                                                                                      |\n",
+      "+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "|POLYGON ((0.9999918937683105 0.9999972581863403, 0.9999918937683105 1.0000026226043701, 1.0000026226043701 1.0000026226043701, 1.0000026226043701 0.9999972581863403, 0.9999918937683105 0.9999972581863403))|\n",
+      "+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "\n",
+      "root\n",
+      " |-- polygon: geometry (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 43
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 1.9 Read shape file\n",
+    "\n",
+    "A shapefile is a `vector data file format` commonly used for geospatial analysis. Shapefiles store the location, geometry, and attribution of `point, line, and polygon` features.\n",
+    "\n",
+    "You can visit the wiki page via this [link](https://en.wikipedia.org/wiki/Shapefile).\n"
+   ],
+   "id": "e17e6f60361aec61"
   },
   {
    "cell_type": "code",
    "source": [
-    "from pyspark.sql import DataFrame\n",
+    "airports_shape_file_path = f\"{data_dir}/shapefile/airports_shape\"\n",
     "\n",
-    "\n",
-    "def get_nearest_commune(df:DataFrame, latitude:str, longitude:str, max_commune_number:int):\n",
-    "    temp_table_name:str = \"temp_tab\"\n",
-    "    df.createOrReplaceTempView(temp_table_name)\n",
-    "    nearest_commune_df = sedona.sql(f\"\"\"\n",
-    "     SELECT z.nom as commune_name, z.insee, ST_DistanceSphere(ST_PointFromText('{longitude},{latitude}', ','), z.geometry) AS distance FROM {temp_table_name} as z ORDER BY distance ASC LIMIT {max_commune_number}\n",
-    "     \"\"\")\n",
-    "    return nearest_commune_df"
+    "# read communes shape file\n",
+    "airports_rdd = ShapefileReader.readToGeometryRDD(sc, airports_shape_file_path)\n",
+    "airports_df = Adapter.toDf(airports_rdd, sedona)\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-25T10:24:10.024048Z",
-     "start_time": "2024-11-25T10:24:09.997552Z"
+     "end_time": "2024-11-27T10:29:51.020499Z",
+     "start_time": "2024-11-27T10:29:50.914939Z"
     }
    },
    "id": "2a527d00100f901d",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 50
   },
   {
-   "cell_type": "code",
-   "source": [
-    "# the gps coordinates for kremlin-Bicetre is 48.8100° N, 2.3539° E\n",
-    "\n",
-    "kb_latitude = \"48.8100\"\n",
-    "kb_longitude = \"2.3539\""
-   ],
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-25T10:24:16.708044Z",
-     "start_time": "2024-11-25T10:24:16.690149Z"
+     "end_time": "2024-11-27T10:29:52.801862Z",
+     "start_time": "2024-11-27T10:29:52.637932Z"
     }
    },
-   "id": "473adcb6d72b74d4",
-   "outputs": [],
-   "execution_count": 6
-  },
-  {
    "cell_type": "code",
    "source": [
-    "\n",
-    "kb_nearest_shape_df = get_nearest_commune(fr_commune_df,kb_latitude,kb_longitude,10)"
+    "airports_df.printSchema()\n",
+    "airports_df.show(1, truncate=False)"
    ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-11-25T10:24:19.792999Z",
-     "start_time": "2024-11-25T10:24:19.573520Z"
-    }
-   },
-   "id": "5003cd8c6aa042e9",
-   "outputs": [],
-   "execution_count": 7
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "%%time\n",
-    "\n",
-    "kb_nearest_shape_df.show()\n",
-    "kb_nearest_shape_df.count()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-11-25T10:24:24.657560Z",
-     "start_time": "2024-11-25T10:24:21.515387Z"
-    }
-   },
-   "id": "d1ea6fde05bbf929",
+   "id": "79e47084a73a1120",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------------------+-----+------------------+\n",
-      "|      commune_name|insee|          distance|\n",
-      "+------------------+-----+------------------+\n",
-      "|Le Kremlin-Bicêtre|94043|198.60307108585405|\n",
-      "|          Gentilly|94037| 798.3521490770968|\n",
-      "|           Arcueil|94003|1543.0937442695515|\n",
-      "|         Villejuif|94076| 2007.793912679607|\n",
-      "|    Ivry-sur-Seine|94041| 2489.634383841373|\n",
-      "|            Cachan|94016| 2590.828517555236|\n",
-      "|         Montrouge|92049| 2750.714176859015|\n",
-      "|           Bagneux|92007| 3462.091511432535|\n",
-      "|   Vitry-sur-Seine|94081|3845.1624363327196|\n",
-      "|   L'Haÿ-les-Roses|94038| 3942.190017739479|\n",
-      "+------------------+-----+------------------+\n",
+      "root\n",
+      " |-- geometry: geometry (nullable = true)\n",
+      " |-- scalerank: string (nullable = true)\n",
+      " |-- featurecla: string (nullable = true)\n",
+      " |-- type: string (nullable = true)\n",
+      " |-- name: string (nullable = true)\n",
+      " |-- abbrev: string (nullable = true)\n",
+      " |-- location: string (nullable = true)\n",
+      " |-- gps_code: string (nullable = true)\n",
+      " |-- iata_code: string (nullable = true)\n",
+      " |-- wikipedia: string (nullable = true)\n",
+      " |-- natlscale: string (nullable = true)\n",
       "\n",
-      "CPU times: total: 0 ns\n",
-      "Wall time: 3.13 s\n"
+      "+---------------------------------------------+---------+--------------------------------------------------------------------------------+--------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------+--------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+---------+\n",
+      "|geometry                                     |scalerank|featurecla                                                                      |type                                              |name                                                                                                                                                                                                    |abbrev|location                                          |gps_code                                                                                                                                                                                                                                                      |iata_code                                                                                                                                                                                                                                                     |wikipedia                                                                                                                                                                                                                                                     |natlscale|\n",
+      "+---------------------------------------------+---------+--------------------------------------------------------------------------------+--------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------+--------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+---------+\n",
+      "|POINT (113.93501638737635 22.315332828086753)|   2     |Airport                                                                         |major                                             |Hong Kong Int'l                                                                                                                                                                                         |HKG   |terminal                                          |VHHH                                                                                                                                                                                                                                                          |HKG                                                                                                                                                                                                                                                           |http://en.wikipedia.org/wiki/Hong_Kong_International_Airport                                                                                                                                                                                                  | 150.000 |\n",
+      "+---------------------------------------------+---------+--------------------------------------------------------------------------------+--------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------+--------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+---------+\n",
+      "only showing top 1 row\n",
+      "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "execution_count": 51
   },
   {
    "cell_type": "markdown",
    "source": [
-    "## Read write GeoParquet\n",
-    "GeoParquet is an **incubating Open Geospatial Consortium (OGC) standard** that adds interoperable geospatial types `(Point, Line, Polygon)` to Parquet. Currently(16/04/2024), the stable version is 1.0.0\n",
+    "## Read GeoParquet\n",
+    "\n",
+    "GeoParquet is an **Open Geospatial Consortium (OGC) standard** that adds interoperable geospatial types `(Point, Line, Polygon)` to Parquet. Currently(27/11/2024), the stable version is 1.1.0\n",
     "You can find the official site of geo-parquet [here](https://geoparquet.org/)"
    ],
    "metadata": {
