--- a/notebooks/basic_tutorial/02.sedona_read_various_data_format.ipynb
+++ b/notebooks/basic_tutorial/02.sedona_read_various_data_format.ipynb
@@ -2137,14 +2137,47 @@
    "id": "4902b5fef6331016"
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "1c0246b76fba9544"
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Appendix\n",
+    "\n",
+    "## **WGC**(World Geodetic reference System)\n",
+    "\n",
+    "It's used globally for mapping and navigation. The most widely known version is **WGS84**, which is the standard used by GPS. It defines the shape of the Earth (ellipsoid), the datum, and the coordinate system.\n",
+    "\n",
+    "Key Features:\n",
+    "\n",
+    "  - Datum: WGS84 Datum, a global standard for latitude, longitude, and ellipsoidal height.\n",
+    "  - Coordinate System: A geographic coordinate system (latitude/longitude) on the WGS84 ellipsoid.\n",
+    "   - Usage: Primarily used for GPS and satellite navigation systems.\n",
+    "      - \n",
+    " > WGS84 is often represented as EPSG:4326 in the EPSG registry, a geographic CRS with latitude and longitude coordinates.\n",
+    " \n",
+    "\n",
+    "## OGC(Open Geospatial Consortium)\n",
+    "\n",
+    "**OGC** is an international organization that sets standards for geospatial and location-based services. It doesn’t define specific CRS codes but provides frameworks and specifications for managing and using CRS in geospatial systems.\n",
+    "\n",
+    "The OGC CRS URNs are part of its standard for referencing coordinate systems.\n",
+    "\n",
+    "```text\n",
+    "urn:ogc:def:crs:EPSG::4326\n",
+    "```\n",
+    "\n",
+    "## EPSG(European Petroleum Survey Group)\n",
+    "\n",
+    "**EPSG** is a registry maintained by the `International Association of Oil & Gas Producers (IOGP)`. It provides a database of `standardized codes for various CRS definitions`, including geographic, projected, and vertical coordinate systems.\n",
+    "\n",
+    "EPSG codes are numeric identifiers for specific CRS or transformation. For example:\n",
+    " - **EPSG:4326**: `WGS84` in geographic coordinates (latitude/longitude).\n",
+    " - **EPSG:3857**: `WGS84` Web Mercator projection (used by most web mapping services).\n",
+    "\n",
+    "> Widely used in GIS software (e.g., QGIS, ArcGIS) and geospatial APIs.\n",
+    "\n",
+    "\n"
+   ],
+   "id": "90b6aedc61f792af"
   }
  ],
  "metadata": {
